Pdl/CodeGenerator/AntlrParserGeneration/GeneratedCode/PacketDescriptionLanguageParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5 PacketDescriptionLanguage.g 2013-03-26 10:08:42

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace Marler.Pdl
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5")]
[System.CLSCompliant(false)]
public partial class PacketDescriptionLanguageParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARRAY_TYPE_FIELD", "BIT_TYPE", "BYTE_TYPE", "COMMENT", "DATA_BLOCK_DEFINITION", "DOUBLE_TYPE", "ENUM_DECLARATION", "ENUM_DEFINITION", "EXPONENT", "FLOAT_TYPE", "ID", "INTEGER", "INT_TYPE", "LONG_TYPE", "OPTIONAL_KEYWORD", "SBYTE_TYPE", "SHORT_TYPE", "SIMPLE_TYPE_FIELD", "STRING_TYPE", "TYPE_ID", "UINT_TYPE", "ULONG_TYPE", "USHORT_TYPE", "','", "';'", "'='", "'['", "']'", "'enum'", "'{'", "'}'"
	};
	public const int EOF=-1;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int ARRAY_TYPE_FIELD=4;
	public const int BIT_TYPE=5;
	public const int BYTE_TYPE=6;
	public const int COMMENT=7;
	public const int DATA_BLOCK_DEFINITION=8;
	public const int DOUBLE_TYPE=9;
	public const int ENUM_DECLARATION=10;
	public const int ENUM_DEFINITION=11;
	public const int EXPONENT=12;
	public const int FLOAT_TYPE=13;
	public const int ID=14;
	public const int INTEGER=15;
	public const int INT_TYPE=16;
	public const int LONG_TYPE=17;
	public const int OPTIONAL_KEYWORD=18;
	public const int SBYTE_TYPE=19;
	public const int SHORT_TYPE=20;
	public const int SIMPLE_TYPE_FIELD=21;
	public const int STRING_TYPE=22;
	public const int TYPE_ID=23;
	public const int UINT_TYPE=24;
	public const int ULONG_TYPE=25;
	public const int USHORT_TYPE=26;

	public PacketDescriptionLanguageParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public PacketDescriptionLanguageParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return PacketDescriptionLanguageParser.tokenNames; } }
	public override string GrammarFileName { get { return "PacketDescriptionLanguage.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_primitiveTypeModifier();
	partial void LeaveRule_primitiveTypeModifier();
	// $ANTLR start "primitiveTypeModifier"
	// PacketDescriptionLanguage.g:24:1: primitiveTypeModifier : OPTIONAL_KEYWORD ;
	[GrammarRule("primitiveTypeModifier")]
	private AstParserRuleReturnScope<object, IToken> primitiveTypeModifier()
	{
		EnterRule_primitiveTypeModifier();
		EnterRule("primitiveTypeModifier", 1);
		TraceIn("primitiveTypeModifier", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken OPTIONAL_KEYWORD1 = default(IToken);

		object OPTIONAL_KEYWORD1_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "primitiveTypeModifier");
		DebugLocation(24, 18);
		try
		{
			// PacketDescriptionLanguage.g:25:2: ( OPTIONAL_KEYWORD )
			DebugEnterAlt(1);
			// PacketDescriptionLanguage.g:25:3: OPTIONAL_KEYWORD
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(25, 3);
			OPTIONAL_KEYWORD1=(IToken)Match(input,OPTIONAL_KEYWORD,Follow._OPTIONAL_KEYWORD_in_primitiveTypeModifier77); 
			OPTIONAL_KEYWORD1_tree = (object)adaptor.Create(OPTIONAL_KEYWORD1);
			adaptor.AddChild(root_0, OPTIONAL_KEYWORD1_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("primitiveTypeModifier", 1);
			LeaveRule("primitiveTypeModifier", 1);
			LeaveRule_primitiveTypeModifier();
		}
		DebugLocation(25, 18);
		} finally { DebugExitRule(GrammarFileName, "primitiveTypeModifier"); }
		return retval;

	}
	// $ANTLR end "primitiveTypeModifier"

	partial void EnterRule_unsignedIntegerType();
	partial void LeaveRule_unsignedIntegerType();
	// $ANTLR start "unsignedIntegerType"
	// PacketDescriptionLanguage.g:43:1: unsignedIntegerType : ( BYTE_TYPE | USHORT_TYPE | UINT_TYPE | ULONG_TYPE );
	[GrammarRule("unsignedIntegerType")]
	private AstParserRuleReturnScope<object, IToken> unsignedIntegerType()
	{
		EnterRule_unsignedIntegerType();
		EnterRule("unsignedIntegerType", 2);
		TraceIn("unsignedIntegerType", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken set2 = default(IToken);

		object set2_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "unsignedIntegerType");
		DebugLocation(43, 51);
		try
		{
			// PacketDescriptionLanguage.g:44:2: ( BYTE_TYPE | USHORT_TYPE | UINT_TYPE | ULONG_TYPE )
			DebugEnterAlt(1);
			// PacketDescriptionLanguage.g:
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(44, 2);

			set2=(IToken)input.LT(1);
			if (input.LA(1)==BYTE_TYPE||(input.LA(1)>=UINT_TYPE && input.LA(1)<=USHORT_TYPE))
			{
				input.Consume();
				adaptor.AddChild(root_0, (object)adaptor.Create(set2));
				state.errorRecovery=false;
			}
			else
			{
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("unsignedIntegerType", 2);
			LeaveRule("unsignedIntegerType", 2);
			LeaveRule_unsignedIntegerType();
		}
		DebugLocation(44, 51);
		} finally { DebugExitRule(GrammarFileName, "unsignedIntegerType"); }
		return retval;

	}
	// $ANTLR end "unsignedIntegerType"

	partial void EnterRule_signedIntegerType();
	partial void LeaveRule_signedIntegerType();
	// $ANTLR start "signedIntegerType"
	// PacketDescriptionLanguage.g:55:1: signedIntegerType : ( SBYTE_TYPE | SHORT_TYPE | INT_TYPE | LONG_TYPE );
	[GrammarRule("signedIntegerType")]
	private AstParserRuleReturnScope<object, IToken> signedIntegerType()
	{
		EnterRule_signedIntegerType();
		EnterRule("signedIntegerType", 3);
		TraceIn("signedIntegerType", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken set3 = default(IToken);

		object set3_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "signedIntegerType");
		DebugLocation(55, 49);
		try
		{
			// PacketDescriptionLanguage.g:56:2: ( SBYTE_TYPE | SHORT_TYPE | INT_TYPE | LONG_TYPE )
			DebugEnterAlt(1);
			// PacketDescriptionLanguage.g:
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(56, 2);

			set3=(IToken)input.LT(1);
			if ((input.LA(1)>=INT_TYPE && input.LA(1)<=LONG_TYPE)||(input.LA(1)>=SBYTE_TYPE && input.LA(1)<=SHORT_TYPE))
			{
				input.Consume();
				adaptor.AddChild(root_0, (object)adaptor.Create(set3));
				state.errorRecovery=false;
			}
			else
			{
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("signedIntegerType", 3);
			LeaveRule("signedIntegerType", 3);
			LeaveRule_signedIntegerType();
		}
		DebugLocation(56, 49);
		} finally { DebugExitRule(GrammarFileName, "signedIntegerType"); }
		return retval;

	}
	// $ANTLR end "signedIntegerType"

	partial void EnterRule_floatingPointType();
	partial void LeaveRule_floatingPointType();
	// $ANTLR start "floatingPointType"
	// PacketDescriptionLanguage.g:62:1: floatingPointType : ( FLOAT_TYPE | DOUBLE_TYPE );
	[GrammarRule("floatingPointType")]
	private AstParserRuleReturnScope<object, IToken> floatingPointType()
	{
		EnterRule_floatingPointType();
		EnterRule("floatingPointType", 4);
		TraceIn("floatingPointType", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken set4 = default(IToken);

		object set4_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "floatingPointType");
		DebugLocation(62, 27);
		try
		{
			// PacketDescriptionLanguage.g:63:2: ( FLOAT_TYPE | DOUBLE_TYPE )
			DebugEnterAlt(1);
			// PacketDescriptionLanguage.g:
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(63, 2);

			set4=(IToken)input.LT(1);
			if (input.LA(1)==DOUBLE_TYPE||input.LA(1)==FLOAT_TYPE)
			{
				input.Consume();
				adaptor.AddChild(root_0, (object)adaptor.Create(set4));
				state.errorRecovery=false;
			}
			else
			{
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("floatingPointType", 4);
			LeaveRule("floatingPointType", 4);
			LeaveRule_floatingPointType();
		}
		DebugLocation(63, 27);
		} finally { DebugExitRule(GrammarFileName, "floatingPointType"); }
		return retval;

	}
	// $ANTLR end "floatingPointType"

	partial void EnterRule_type();
	partial void LeaveRule_type();
	// $ANTLR start "type"
	// PacketDescriptionLanguage.g:77:1: type : ( BIT_TYPE | unsignedIntegerType | signedIntegerType | STRING_TYPE | floatingPointType | TYPE_ID );
	[GrammarRule("type")]
	private AstParserRuleReturnScope<object, IToken> type()
	{
		EnterRule_type();
		EnterRule("type", 5);
		TraceIn("type", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken BIT_TYPE5 = default(IToken);
		IToken STRING_TYPE8 = default(IToken);
		IToken TYPE_ID10 = default(IToken);
		AstParserRuleReturnScope<object, IToken> unsignedIntegerType6 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> signedIntegerType7 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> floatingPointType9 = default(AstParserRuleReturnScope<object, IToken>);

		object BIT_TYPE5_tree = default(object);
		object STRING_TYPE8_tree = default(object);
		object TYPE_ID10_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "type");
		DebugLocation(77, 96);
		try
		{
			// PacketDescriptionLanguage.g:78:3: ( BIT_TYPE | unsignedIntegerType | signedIntegerType | STRING_TYPE | floatingPointType | TYPE_ID )
			int alt1=6;
			try { DebugEnterDecision(1, false);
			switch (input.LA(1))
			{
			case BIT_TYPE:
				{
				alt1 = 1;
				}
				break;
			case BYTE_TYPE:
			case UINT_TYPE:
			case ULONG_TYPE:
			case USHORT_TYPE:
				{
				alt1 = 2;
				}
				break;
			case INT_TYPE:
			case LONG_TYPE:
			case SBYTE_TYPE:
			case SHORT_TYPE:
				{
				alt1 = 3;
				}
				break;
			case STRING_TYPE:
				{
				alt1 = 4;
				}
				break;
			case DOUBLE_TYPE:
			case FLOAT_TYPE:
				{
				alt1 = 5;
				}
				break;
			case TYPE_ID:
				{
				alt1 = 6;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 1, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// PacketDescriptionLanguage.g:78:3: BIT_TYPE
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(78, 3);
				BIT_TYPE5=(IToken)Match(input,BIT_TYPE,Follow._BIT_TYPE_in_type333); 
				BIT_TYPE5_tree = (object)adaptor.Create(BIT_TYPE5);
				adaptor.AddChild(root_0, BIT_TYPE5_tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// PacketDescriptionLanguage.g:78:14: unsignedIntegerType
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(78, 14);
				PushFollow(Follow._unsignedIntegerType_in_type337);
				unsignedIntegerType6=unsignedIntegerType();
				PopFollow();

				adaptor.AddChild(root_0, unsignedIntegerType6.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// PacketDescriptionLanguage.g:78:36: signedIntegerType
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(78, 36);
				PushFollow(Follow._signedIntegerType_in_type341);
				signedIntegerType7=signedIntegerType();
				PopFollow();

				adaptor.AddChild(root_0, signedIntegerType7.Tree);

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// PacketDescriptionLanguage.g:78:56: STRING_TYPE
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(78, 56);
				STRING_TYPE8=(IToken)Match(input,STRING_TYPE,Follow._STRING_TYPE_in_type345); 
				STRING_TYPE8_tree = (object)adaptor.Create(STRING_TYPE8);
				adaptor.AddChild(root_0, STRING_TYPE8_tree);

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// PacketDescriptionLanguage.g:78:70: floatingPointType
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(78, 70);
				PushFollow(Follow._floatingPointType_in_type349);
				floatingPointType9=floatingPointType();
				PopFollow();

				adaptor.AddChild(root_0, floatingPointType9.Tree);

				}
				break;
			case 6:
				DebugEnterAlt(6);
				// PacketDescriptionLanguage.g:78:90: TYPE_ID
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(78, 90);
				TYPE_ID10=(IToken)Match(input,TYPE_ID,Follow._TYPE_ID_in_type353); 
				TYPE_ID10_tree = (object)adaptor.Create(TYPE_ID10);
				adaptor.AddChild(root_0, TYPE_ID10_tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("type", 5);
			LeaveRule("type", 5);
			LeaveRule_type();
		}
		DebugLocation(78, 96);
		} finally { DebugExitRule(GrammarFileName, "type"); }
		return retval;

	}
	// $ANTLR end "type"

	partial void EnterRule_enumDefinitionOptionalDeclaration();
	partial void LeaveRule_enumDefinitionOptionalDeclaration();
	// $ANTLR start "enumDefinitionOptionalDeclaration"
	// PacketDescriptionLanguage.g:109:1: enumDefinitionOptionalDeclaration : 'enum' ( unsignedIntegerType )? ID '{' ( enumValues )? ( ',' )? '}' ( enumDeclaration )? -> ^( ENUM_DEFINITION ID ( unsignedIntegerType )? ( enumDeclaration )? ( enumValues )? ) ;
	[GrammarRule("enumDefinitionOptionalDeclaration")]
	private AstParserRuleReturnScope<object, IToken> enumDefinitionOptionalDeclaration()
	{
		EnterRule_enumDefinitionOptionalDeclaration();
		EnterRule("enumDefinitionOptionalDeclaration", 6);
		TraceIn("enumDefinitionOptionalDeclaration", 6);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken string_literal11 = default(IToken);
		IToken ID13 = default(IToken);
		IToken char_literal14 = default(IToken);
		IToken char_literal16 = default(IToken);
		IToken char_literal17 = default(IToken);
		AstParserRuleReturnScope<object, IToken> unsignedIntegerType12 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> enumValues15 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> enumDeclaration18 = default(AstParserRuleReturnScope<object, IToken>);

		object string_literal11_tree = default(object);
		object ID13_tree = default(object);
		object char_literal14_tree = default(object);
		object char_literal16_tree = default(object);
		object char_literal17_tree = default(object);
		RewriteRuleITokenStream stream_32=new RewriteRuleITokenStream(adaptor,"token 32");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_33=new RewriteRuleITokenStream(adaptor,"token 33");
		RewriteRuleITokenStream stream_34=new RewriteRuleITokenStream(adaptor,"token 34");
		RewriteRuleITokenStream stream_27=new RewriteRuleITokenStream(adaptor,"token 27");
		RewriteRuleSubtreeStream stream_unsignedIntegerType=new RewriteRuleSubtreeStream(adaptor,"rule unsignedIntegerType");
		RewriteRuleSubtreeStream stream_enumDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule enumDeclaration");
		RewriteRuleSubtreeStream stream_enumValues=new RewriteRuleSubtreeStream(adaptor,"rule enumValues");
		try { DebugEnterRule(GrammarFileName, "enumDefinitionOptionalDeclaration");
		DebugLocation(109, 1);
		try
		{
			// PacketDescriptionLanguage.g:110:2: ( 'enum' ( unsignedIntegerType )? ID '{' ( enumValues )? ( ',' )? '}' ( enumDeclaration )? -> ^( ENUM_DEFINITION ID ( unsignedIntegerType )? ( enumDeclaration )? ( enumValues )? ) )
			DebugEnterAlt(1);
			// PacketDescriptionLanguage.g:110:4: 'enum' ( unsignedIntegerType )? ID '{' ( enumValues )? ( ',' )? '}' ( enumDeclaration )?
			{
			DebugLocation(110, 4);
			string_literal11=(IToken)Match(input,32,Follow._32_in_enumDefinitionOptionalDeclaration482);  
			stream_32.Add(string_literal11);

			DebugLocation(110, 11);
			// PacketDescriptionLanguage.g:110:11: ( unsignedIntegerType )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_1 = input.LA(1);

			if ((LA2_1==BYTE_TYPE||(LA2_1>=UINT_TYPE && LA2_1<=USHORT_TYPE)))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// PacketDescriptionLanguage.g:110:11: unsignedIntegerType
				{
				DebugLocation(110, 11);
				PushFollow(Follow._unsignedIntegerType_in_enumDefinitionOptionalDeclaration484);
				unsignedIntegerType12=unsignedIntegerType();
				PopFollow();

				stream_unsignedIntegerType.Add(unsignedIntegerType12.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(2); }

			DebugLocation(110, 32);
			ID13=(IToken)Match(input,ID,Follow._ID_in_enumDefinitionOptionalDeclaration487);  
			stream_ID.Add(ID13);

			DebugLocation(110, 35);
			char_literal14=(IToken)Match(input,33,Follow._33_in_enumDefinitionOptionalDeclaration489);  
			stream_33.Add(char_literal14);

			DebugLocation(110, 39);
			// PacketDescriptionLanguage.g:110:39: ( enumValues )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_1 = input.LA(1);

			if ((LA3_1==ID))
			{
				alt3 = 1;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// PacketDescriptionLanguage.g:110:39: enumValues
				{
				DebugLocation(110, 39);
				PushFollow(Follow._enumValues_in_enumDefinitionOptionalDeclaration491);
				enumValues15=enumValues();
				PopFollow();

				stream_enumValues.Add(enumValues15.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(110, 51);
			// PacketDescriptionLanguage.g:110:51: ( ',' )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_1 = input.LA(1);

			if ((LA4_1==27))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// PacketDescriptionLanguage.g:110:51: ','
				{
				DebugLocation(110, 51);
				char_literal16=(IToken)Match(input,27,Follow._27_in_enumDefinitionOptionalDeclaration494);  
				stream_27.Add(char_literal16);


				}
				break;

			}
			} finally { DebugExitSubRule(4); }

			DebugLocation(110, 56);
			char_literal17=(IToken)Match(input,34,Follow._34_in_enumDefinitionOptionalDeclaration497);  
			stream_34.Add(char_literal17);

			DebugLocation(110, 60);
			// PacketDescriptionLanguage.g:110:60: ( enumDeclaration )?
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, false);
			int LA5_1 = input.LA(1);

			if ((LA5_1==ID))
			{
				alt5 = 1;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// PacketDescriptionLanguage.g:110:60: enumDeclaration
				{
				DebugLocation(110, 60);
				PushFollow(Follow._enumDeclaration_in_enumDefinitionOptionalDeclaration499);
				enumDeclaration18=enumDeclaration();
				PopFollow();

				stream_enumDeclaration.Add(enumDeclaration18.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(5); }



			{
			// AST REWRITE
			// elements: unsignedIntegerType, enumValues, enumDeclaration, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 110:77: -> ^( ENUM_DEFINITION ID ( unsignedIntegerType )? ( enumDeclaration )? ( enumValues )? )
			{
				DebugLocation(110, 80);
				// PacketDescriptionLanguage.g:110:80: ^( ENUM_DEFINITION ID ( unsignedIntegerType )? ( enumDeclaration )? ( enumValues )? )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(110, 82);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ENUM_DEFINITION, "ENUM_DEFINITION"), root_1);

				DebugLocation(110, 98);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(110, 101);
				// PacketDescriptionLanguage.g:110:101: ( unsignedIntegerType )?
				if (stream_unsignedIntegerType.HasNext)
				{
					DebugLocation(110, 101);
					adaptor.AddChild(root_1, stream_unsignedIntegerType.NextTree());

				}
				stream_unsignedIntegerType.Reset();
				DebugLocation(110, 122);
				// PacketDescriptionLanguage.g:110:122: ( enumDeclaration )?
				if (stream_enumDeclaration.HasNext)
				{
					DebugLocation(110, 122);
					adaptor.AddChild(root_1, stream_enumDeclaration.NextTree());

				}
				stream_enumDeclaration.Reset();
				DebugLocation(110, 139);
				// PacketDescriptionLanguage.g:110:139: ( enumValues )?
				if (stream_enumValues.HasNext)
				{
					DebugLocation(110, 139);
					adaptor.AddChild(root_1, stream_enumValues.NextTree());

				}
				stream_enumValues.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("enumDefinitionOptionalDeclaration", 6);
			LeaveRule("enumDefinitionOptionalDeclaration", 6);
			LeaveRule_enumDefinitionOptionalDeclaration();
		}
		DebugLocation(111, 1);
		} finally { DebugExitRule(GrammarFileName, "enumDefinitionOptionalDeclaration"); }
		return retval;

	}
	// $ANTLR end "enumDefinitionOptionalDeclaration"

	partial void EnterRule_enumDeclaration();
	partial void LeaveRule_enumDeclaration();
	// $ANTLR start "enumDeclaration"
